k8s/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  template:
    spec:
      containers: 
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin
        ports:
        - name: web
          containerPort: 8096
        - name: local-discovery
          containerPort: 7359
        - name: dlna
          containerPort: 1900
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /data/movies
        - name: tv
          mountPath: /data/tvshows
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-data-pvc
      - name: movies
        hostPath:
          path: /mnt/ssd1/library/movies
          type: Directory
      - name: tv
        hostPath:
          path: /mnt/ssd1/library/tv
          type: Directory
