k8s/jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-web
spec:
  type: ClusterIP
  ports: 
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-local-discovery
spec:
  type: LoadBalancer
  ports: 
  - name: local-discovery
    protocol: TCP
    port: 7359
    targetPort: local-discovery
  - name: dlna
    protocol: TCP
    port: 1900
    targetPort: dlna
