k8s/jellyfin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  rules:
  - host: jellyfin.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-web
            port:
              number: 80
